
Attempted to solve a problem with the selct fields in the bookoptions;
optins of different lengths also had different css widths and made
clicking difficult. Have had to use fixed widths in px to get around
this, as nothing else worked. Firefox rendering css problem?

Have added a new contact option and associated scripts to the
EntryBook. This still needs tying in with a new student though.


Version ClaSS-0.8.15 release (2007/04/16)
-----------------------------------------

Exposed the nationality field for the guardians.

Incorporated a choice of contactfield for searching in the
quick_search.php which defaults to surname.

Added the ISO two letter country codes, these are translated in the
countries.php file which is part of each lang pack. These still need
to be implemented for the nationality and country fields.

Office and admin roles can now search in the infobook using a choice
of fields for both contact and student. The fields can be extended.


Version ClaSS-0.8.14 release (2007/04/02)
-----------------------------------------

The use of listvariables for list_community.php had broken the cohort
matrix. Had to bugfix by making selectedvalue for arrays to be
correctly handled.

Also the import_students dob was broken. This needs to be made clever.


Version ClaSS-0.8.13 release (2007/03/30)
-----------------------------------------

Standardised on an externalparams array for constructing the link in
all the externalbooks.

New field added to table users to hold the emailpasswd and used to feed
to the external webmail app (use the patch!!!). This is encrypted
before storing in the db using endecrypt taken from moodlelib. The
same function is needed at the other end (in the webmail app) to
decrypt the password upon receipt.

The xmlprocessor function is under development for publishing reports
to files. The feature is currently an admin only button for the
report_reports_list.php page. It needs a new (and temporary!)