@@ -181,7 +181,7 @@ button {
 	margin:0 0 5% 2%;
     color:#ffffff;
 	}
-.bookoptions select.searchlabel, .bookoptions select.searchlabel option {
+.bookoptions select.switcher, .bookoptions select.switcher option {
 	font-weight:600;
     color:#ffffff;
 	background-color:#444444;
@@ -340,4 +340,8 @@ div#sidebuttons {
 	padding:0; margin:0 1px; border:0; 
 	width:22px; height:22px;
     background-color:#444444;
+	}
+div.hidden {
+	display:none;
+	border:0; margin:0; padding:0;
 	}
